objects/PC_Alert__c.object
<CustomObject>
    <description>PatientConnect custom object used to alert user to exceptional scenarios</description>
    <fields>
        <fullName>PC_Alert_Status__c</fullName>
        <description>The status of the alert.</description>
        <label>Alert Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Overridden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Date_of_Alert__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date and time of the alert.</description>
        <label>Date of Alert</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Notes__c</fullName>
        <description>Description about the alert.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Patient_ID__c</fullName>
        <description>ID of the Patient associated with the Program attached to the Alert</description>
        <formula>PC_Program__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Patient__c</fullName>
        <description>The name of the patient who is associated with the program attached to the alert.</description>
        <formula>PC_Program__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <description>The Program Case to which the alert is associated with.</description>
        <label>Program</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Reason_for_Alert__c</fullName>
        <description>The reason for which the alert was generated.</description>
        <label>Reason for Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Reason_for_Override__c</fullName>
        <description>The reason why the alert was disregarded.</description>
        <label>Reason for Dismissal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Alert_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adherence data received</fullName>
                </value>
                <value>
                    <fullName>Recommend Retest</fullName>
                </value>
                <value>
                    <fullName>Test result error</fullName>
                    <isActive>false</isActive>
                    <label>Test result error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <description>The type of the alert.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pulsewave</fullName>
                </value>
                <value>
                    <fullName>Oximetry</fullName>
                </value>
                <value>
                    <fullName>Body Weight</fullName>
                </value>
                <value>
                    <fullName>Result Outside Limits</fullName>
                </value>
                <value>
                    <fullName>Test Result Risk</fullName>
                </value>
                <value>
                    <fullName>Adherence Risk</fullName>
                </value>
                <value>
                    <fullName>Discontinuation Risk</fullName>
                </value>
                <value>
                    <fullName>Late Prescription Renewal</fullName>
                </value>
                <value>
                    <fullName>Unanswered SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Program__c</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Alert_Status__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Reason_for_Alert__c</columns>
        <columns>PC_Date_of_Alert__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Madeline_s_Alerts</fullName>
        <columns>NAME</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Reason_for_Alert__c</columns>
        <columns>PC_Alert_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Patient__c</field>
            <operation>contains</operation>
            <value>Madeline</value>
        </filters>
        <label>Madeline&apos;s Alerts</label>
    </listViews>
    <listViews>
        <fullName>My_New_Alerts</fullName>
        <columns>NAME</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Program__c</columns>
        <columns>PC_Alert_Status__c</columns>
        <columns>PC_Reason_for_Alert__c</columns>
        <columns>PC_Date_of_Alert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Alert_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Alerts</label>
    </listViews>
    <listViews>
        <fullName>New_and_In_Progress_Alerts</fullName>
        <columns>NAME</columns>
        <columns>PC_Date_of_Alert__c</columns>
        <columns>PC_Alert_Status__c</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Reason_for_Alert__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Alert_Status__c</field>
            <operation>equals</operation>
            <value>New,Accepted</value>
        </filters>
        <label>New and Accepted Alerts</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>